ADD: Theor-Found: doxygen

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -699,5 +699,17 @@ url={https://doc.qt.io/qt-5/signalsandslots.html},
 publisher={Qt},
   note={accessed: 2021-12-2},
 }
+@misc{doxygenIndex,
+title={Doxygen},
+url={https://www.doxygen.nl/index.html},
+publisher={Doxygen},
+  note={accessed: 2021-12-2},
+}
+@misc{doxygenDocBlocks,
+title={Doxygen: Documenting the code},
+url={https://www.doxygen.nl/manual/docblocks.html},
+publisher={Doxygen},
+  note={accessed: 2021-12-2},
+}
 % +++++++++++++++++++++++  END ==============================
 
