ADD: Theor-Found: Scenting technologies

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -711,5 +711,24 @@ url={https://www.doxygen.nl/manual/docblocks.html},
 publisher={Doxygen},
   note={accessed: 2021-12-2},
 }
+%
+@article{wen2019development,
+  title={Development of a piezoelectric-based odor reproduction system},
+  author={Wen, Tengteng and Luo, Dehan and Ji, Yongjie and Zhong, Pingzhong},
+  journal={Electronics},
+  volume={8},
+  number={8},
+  pages={870},
+  year={2019},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+%
+@misc{aromaUltrasonicVsNebul,
+title={What's the difference between an ultrasonic diffuser and a nebulizing diffuser},
+url={https://www.aromaoutfitters.com/whats-the-difference-between-an-ultrasonic-diffuser-and-a-nebulizing-diffuser/},
+publisher={Aroma Outfitters},
+  note={accessed: 2021-12-5},
+}
+
 % +++++++++++++++++++++++  END ==============================
 
