ADD: Theor Foundations about UI Framework

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -692,5 +692,17 @@ url={https://doc.qt.io/qt-5/signalsandslots.html},
 publisher={Qt},
   note={accessed: 2021-12-2},
 }
+@misc{qt-usage,
+title={Coffee Machine Example},
+url={https://doc.qt.io/qt-5/qtdoc-demos-coffee-example.html},
+publisher={Qt},
+  note={accessed: 2021-12-2},
+}
+@misc{qt-root,
+title={EMBEDDED LINUX – WORKING WITH QT},
+url={https://devarea.com/embedded-linux-working-with-qt/#.Ya3vmWjP0kI},
+publisher={Liran B.H},
+  note={accessed: 2021-12-6},
+}
 % +++++++++++++++++++++++  END ==============================
 
