--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -699,7 +699,6 @@ url={https://doc.qt.io/qt-5/signalsandslots.html},
 publisher={Qt},
   note={accessed: 2021-12-2},
 }
-<<<<<<< HEAD
 @misc{qt-usage,
 title={Coffee Machine Example},
 url={https://doc.qt.io/qt-5/qtdoc-demos-coffee-example.html},
@@ -712,7 +711,6 @@ url={https://devarea.com/embedded-linux-working-with-qt/#.Ya3vmWjP0kI},
 publisher={Liran B.H},
   note={accessed: 2021-12-6},
 }
-=======
 @misc{doxygenIndex,
 title={Doxygen},
 url={https://www.doxygen.nl/index.html},
@@ -743,7 +741,15 @@ url={https://www.aromaoutfitters.com/whats-the-difference-between-an-ultrasonic-
 publisher={Aroma Outfitters},
   note={accessed: 2021-12-5},
 }
-
->>>>>>> d1e47c49679059ab831134330ac735cee700b0be
+%
+@article{abid2015novel,
+  title={A Novel Olfactory Displays' Scent Dispersing Module},
+  author={Abid, Saad Hameed and Li, Zhiyong and Li, Renfa and Waleed, Jumana},
+  journal={International Journal of Hybrid Information Technology},
+  volume={8},
+  number={1},
+  pages={435--442},
+  year={2015}
+}
 % +++++++++++++++++++++++  END ==============================
 
