ADD: Theor Foundations on user detection

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -674,13 +674,6 @@ url={https://julienjorge.medium.com/an-overview-of-build-systems-mostly-for-c-pr
   year={2018},
   note={accessed: 2021-12-1},
 }
-@misc{sourceCodeDocBestPractices,
-  title={Source code documentation best practices},
-url={https://easternpeak.com/blog/source-code-documentation-best-practices/},
-  publisher={Eastern Peak},
-  year={2017},
-  note={accessed: 2021-12-2},
-}
 @misc{ui-lists,
 title={C++ UI Libraries},
 url={https://philippegroarke.com/posts/2018/c++_ui_solutions/},
@@ -699,7 +692,6 @@ url={https://doc.qt.io/qt-5/signalsandslots.html},
 publisher={Qt},
   note={accessed: 2021-12-2},
 }
-<<<<<<< HEAD
 @misc{qt-usage,
 title={Coffee Machine Example},
 url={https://doc.qt.io/qt-5/qtdoc-demos-coffee-example.html},
@@ -712,38 +704,23 @@ url={https://devarea.com/embedded-linux-working-with-qt/#.Ya3vmWjP0kI},
 publisher={Liran B.H},
   note={accessed: 2021-12-6},
 }
-=======
-@misc{doxygenIndex,
-title={Doxygen},
-url={https://www.doxygen.nl/index.html},
-publisher={Doxygen},
-  note={accessed: 2021-12-2},
+@misc{sensors-list,
+title={The Beginner’s Guide to Motion Sensors},
+url={https://www.safewise.com/resources/motion-sensor-guide/},
+publisher={Kasey Tross},
+  note={accessed: 2021-12-6},
 }
-@misc{doxygenDocBlocks,
-title={Doxygen: Documenting the code},
-url={https://www.doxygen.nl/manual/docblocks.html},
-publisher={Doxygen},
-  note={accessed: 2021-12-2},
+@misc{ultrasonic-sensor,
+title={Understanding How Ultrasonic Sensors Work},
+url={https://www.maxbotix.com/articles/how-ultrasonic-sensors-work.htm},
+publisher={Roderick Burnett},
+  note={accessed: 2021-12-6},
 }
-%
-@article{wen2019development,
-  title={Development of a piezoelectric-based odor reproduction system},
-  author={Wen, Tengteng and Luo, Dehan and Ji, Yongjie and Zhong, Pingzhong},
-  journal={Electronics},
-  volume={8},
-  number={8},
-  pages={870},
-  year={2019},
-  publisher={Multidisciplinary Digital Publishing Institute}
+@misc{ultrasonic-sensor-img,
+title={Understanding How Ultrasonic Sensors Work},
+url={https://www.linearmotiontips.com/ultrasonic-sensors-for-linear-position-and-distance-measuring/},
+publisher={Danielle Collins},
+  note={accessed: 2021-12-6},
 }
-%
-@misc{aromaUltrasonicVsNebul,
-title={What's the difference between an ultrasonic diffuser and a nebulizing diffuser},
-url={https://www.aromaoutfitters.com/whats-the-difference-between-an-ultrasonic-diffuser-and-a-nebulizing-diffuser/},
-publisher={Aroma Outfitters},
-  note={accessed: 2021-12-5},
-}
-
->>>>>>> d1e47c49679059ab831134330ac735cee700b0be
 % +++++++++++++++++++++++  END ==============================
 
