--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -177,5 +177,6 @@
 \newacronym{ddl}{DDL}{Data Definition Language}
 \newacronym{dml}{DML}{Data Manipulation Language}
 \newacronym{bsd}{BSD}{Berkeley Software Distribution}
-
+\newacronym{pir}{PIR}{Passive Infrared}
+\newacronym{mw}{MW}{Mircowave}
 % ========================== END ======================
