UPDT: Theor-Found: Scenting tecnhologies - end

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -704,13 +704,11 @@ url={https://devarea.com/embedded-linux-working-with-qt/#.Ya3vmWjP0kI},
 publisher={Liran B.H},
   note={accessed: 2021-12-6},
 }
-<<<<<<< HEAD
 @misc{sensors-list,
 title={The Beginner’s Guide to Motion Sensors},
 url={https://www.safewise.com/resources/motion-sensor-guide/},
 publisher={Kasey Tross},
   note={accessed: 2021-12-6},
-=======
 @misc{doxygenIndex,
 title={Doxygen},
 url={https://www.doxygen.nl/index.html},
@@ -722,7 +720,6 @@ title={Doxygen: Documenting the code},
 url={https://www.doxygen.nl/manual/docblocks.html},
 publisher={Doxygen},
   note={accessed: 2021-12-2},
->>>>>>> e96c27c564af17b760adfef1b6251135479327c8
 }
 @misc{ultrasonic-sensor,
 title={Understanding How Ultrasonic Sensors Work},
@@ -736,8 +733,6 @@ url={https://www.linearmotiontips.com/ultrasonic-sensors-for-linear-position-and
 publisher={Danielle Collins},
   note={accessed: 2021-12-6},
 }
-<<<<<<< HEAD
-=======
 %
 @article{abid2015novel,
   title={A Novel Olfactory Displays' Scent Dispersing Module},
@@ -748,6 +743,19 @@ publisher={Danielle Collins},
   pages={435--442},
   year={2015}
 }
->>>>>>> e96c27c564af17b760adfef1b6251135479327c8
+%
+@misc{ebayPiezo,
+title={113KHz D20mm Ultrasonic Mist Maker Atomizing Fogger Humidifier Module w/ PCB},
+url={https://shorturl.at/hlxFQ},
+publisher={Ebay},
+  note={accessed: 2021-12-6},
+}
+%
+@misc{piezoSchematic,
+title={Make your own super simple ultrasonic mist maker},
+url={https://www.instructables.com/Make-Your-Own-Super-Simple-Ultrasonic-Mist-Maker/},
+publisher={Instructables --- GreatScottLab},
+  note={accessed: 2021-12-6},
+}
 % +++++++++++++++++++++++  END ==============================
 
