--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -178,5 +178,6 @@
 \newacronym{dml}{DML}{Data Manipulation Language}
 \newacronym{bsd}{BSD}{Berkeley Software Distribution}
 \newacronym{pir}{PIR}{Passive Infrared}
-\newacronym{mw}{MW}{Mircowave}
+\newacronym{mw}{MW}{Microwave}
+\newacronym{mosfet}{MOSFET}{Metal Oxide Semiconductor Field-Effect Transistor}
 % ========================== END ======================
