--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -757,5 +757,19 @@ url={https://www.instructables.com/Make-Your-Own-Super-Simple-Ultrasonic-Mist-Ma
 publisher={Instructables --- GreatScottLab},
   note={accessed: 2021-12-6},
 }
+%
+@misc{rakutenTop10SMApis,
+title={Top 10 Social Media APIs: Twitter, Facebook, Instagram, and many more},
+url={https://medium.com/rakuten-rapidapi/top-10-social-media-apis-twitter-facebook-instagram-and-many-more-5c13262c61fe},
+publisher={Medium --- Rakuten},
+  note={accessed: 2021-12-7},
+}
+%
+@misc{ayrshareTop10SMApis,
+title={Top 10 Social Media APIs for developers},
+url={https://www.ayrshare.com/top-10-social-media-apis-for-developers/},
+publisher={Ayrshare},
+  note={accessed: 2021-12-7},
+}
 % +++++++++++++++++++++++  END ==============================
 
