--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -180,4 +180,6 @@
 \newacronym{pir}{PIR}{Passive Infrared}
 \newacronym{mw}{MW}{Microwave}
 \newacronym{mosfet}{MOSFET}{Metal Oxide Semiconductor Field-Effect Transistor}
+\newacronym{sdk}{SDK}{Software Development Kit}
+\newacronym{http}{HTTP}{Hypertext Transfer Protocol}
 % ========================== END ======================
