UPDT: Theor-Found: SM APIs - Post tweet example

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -771,5 +771,61 @@ url={https://www.ayrshare.com/top-10-social-media-apis-for-developers/},
 publisher={Ayrshare},
   note={accessed: 2021-12-7},
 }
+%
+@misc{twitterAbout,
+title={Getting Started with the Twitter API | Docs | Twitter Developer Platform},
+url={https://developer.twitter.com/en/docs/twitter-api/getting-started/about-twitter-api},
+journal={Twitter},
+publisher={Twitter}
+  note={accessed: 2021-12-8},
+}
+%
+@misc{twitterAPIGettingStarted,
+title={Getting access to the Twitter API | Docs | Twitter Developer Platform},
+url={https://developer.twitter.com/en/docs/twitter-api/getting-started/getting-access-to-the-twitter-api},
+journal={Twitter},
+publisher={Twitter}
+  note={accessed: 2021-12-8},
+}
+%
+@misc{whatsRestApi,
+title={What is a REST API?},
+url={https://www.redhat.com/en/topics/api/what-is-a-rest-api},
+journal={Red Hat},
+publisher={Red Hat}
+  note={accessed: 2021-12-8},
+}
+%
+@misc{twitterAPIMakeFirstRequest,
+title={Make your first request | Docs | Twitter Developer Platform},
+url={https://developer.twitter.com/en/docs/twitter-api/getting-started/make-your-first-request},
+journal={Twitter},
+publisher={Twitter}
+  note={accessed: 2021-12-8},
+}
+%
+@misc{twitterAPIRefPostTweet,
+title={Post tweets --- API reference | Docs | Twitter Developer Platform},
+url={https://developer.twitter.com/en/docs/twitter-api/tweets/manage-tweets/api-reference/post-tweets},
+journal={Twitter},
+publisher={Twitter},
+  note={accessed: 2021-12-8},
+}
+@misc{twitterManageTweetIntro,
+title={Manage Tweets: Introduction | Docs | Twitter Developer Platform},
+url={https://developer.twitter.com/en/docs/twitter-api/tweets/manage-tweets/introduction},
+journal={Twitter},
+publisher={Twitter},
+  note={accessed: 2021-12-8},
+}
+@misc{twitterManageTweetQuickStart,
+title={Manage Tweets: Introduction | Docs | Twitter Developer Platform},
+url={https://developer.twitter.com/en/docs/twitter-api/tweets/manage-tweets/quick-start},
+journal={Twitter},
+publisher={Twitter},
+  note={accessed: 2021-12-8},
+}
+
+
 % +++++++++++++++++++++++  END ==============================
 
