--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -182,4 +182,6 @@
 \newacronym{mosfet}{MOSFET}{Metal Oxide Semiconductor Field-Effect Transistor}
 \newacronym{sdk}{SDK}{Software Development Kit}
 \newacronym{http}{HTTP}{Hypertext Transfer Protocol}
+\newacronym{rest}{REST}{Representation State Transfer}
+\newacronym{json}{JSON}{Javascript Object Notation}
 % ========================== END ======================
