ADD: Theaor Foundations

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -708,7 +708,8 @@ publisher={Liran B.H},
 title={The Beginner’s Guide to Motion Sensors},
 url={https://www.safewise.com/resources/motion-sensor-guide/},
 publisher={Kasey Tross},
-  note={accessed: 2021-12-6},
+  note={accessed: 2021-12-6}}
+
 @misc{doxygenIndex,
 title={Doxygen},
 url={https://www.doxygen.nl/index.html},
@@ -756,6 +757,32 @@ title={Make your own super simple ultrasonic mist maker},
 url={https://www.instructables.com/Make-Your-Own-Super-Simple-Ultrasonic-Mist-Maker/},
 publisher={Instructables --- GreatScottLab},
   note={accessed: 2021-12-6},
+}
+%
+@misc{camera-example,
+title={How to spot the biscuit thief with Raspberry Pi and C++},
+url={https://www.rs-online.com/designspark/beginners-guide-to-computer-vision-with-raspberry-pi-4},
+publisher={Kamilla Aliakhmet},
+  note={accessed: 2021-12-6},
+}
+%
+@misc{video-encoding,
+title={What are video encoding formats? | Video formats},
+url={https://www.cloudflare.com/learning/video/video-encoding-formats/},
+publisher={Cloudflare},
+  note={accessed: 2021-12-8},
+}
+@misc{video-player-rasp,
+title={Using your Raspberry Pi as a Video Player},
+url={https://pimylifeup.com/raspberry-pi-video-player/},
+publisher={PiMyLifeUP},
+  note={accessed: 2021-12-8},
+}
+@misc{file-transf-protoc,
+title={What Are the Top File Transfer Protocols?},
+url={https://www.goanywhere.com/blog/what-are-the-top-file-transfer-protocols},
+publisher={Heath Kath},
+  note={accessed: 2021-12-8},
 }
 % +++++++++++++++++++++++  END ==============================
 
