--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -785,7 +785,7 @@ url={https://www.goanywhere.com/blog/what-are-the-top-file-transfer-protocols},
 publisher={Heath Kath},
   note={accessed: 2021-12-8},
 }
-=======
+%
 @misc{rakutenTop10SMApis,
 title={Top 10 Social Media APIs: Twitter, Facebook, Instagram, and many more},
 url={https://medium.com/rakuten-rapidapi/top-10-social-media-apis-twitter-facebook-instagram-and-many-more-5c13262c61fe},
@@ -804,7 +804,7 @@ publisher={Ayrshare},
 title={Getting Started with the Twitter API | Docs | Twitter Developer Platform},
 url={https://developer.twitter.com/en/docs/twitter-api/getting-started/about-twitter-api},
 journal={Twitter},
-publisher={Twitter}
+publisher={Twitter},
   note={accessed: 2021-12-8},
 }
 %
@@ -812,7 +812,7 @@ publisher={Twitter}
 title={Getting access to the Twitter API | Docs | Twitter Developer Platform},
 url={https://developer.twitter.com/en/docs/twitter-api/getting-started/getting-access-to-the-twitter-api},
 journal={Twitter},
-publisher={Twitter}
+publisher={Twitter},
   note={accessed: 2021-12-8},
 }
 %
@@ -820,7 +820,7 @@ publisher={Twitter}
 title={What is a REST API?},
 url={https://www.redhat.com/en/topics/api/what-is-a-rest-api},
 journal={Red Hat},
-publisher={Red Hat}
+publisher={Red Hat},
   note={accessed: 2021-12-8},
 }
 %
@@ -828,7 +828,7 @@ publisher={Red Hat}
 title={Make your first request | Docs | Twitter Developer Platform},
 url={https://developer.twitter.com/en/docs/twitter-api/getting-started/make-your-first-request},
 journal={Twitter},
-publisher={Twitter}
+publisher={Twitter},
   note={accessed: 2021-12-8},
 }
 %
@@ -853,8 +853,5 @@ journal={Twitter},
 publisher={Twitter},
   note={accessed: 2021-12-8},
 }
-
-
->>>>>>> 034fddd3cf7c592af8f0a3eaee9e36b2f6598013
 % +++++++++++++++++++++++  END ==============================
 
