ADD: Theor-Found: SM APIs - C++ libraries

--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -185,4 +185,5 @@
 \newacronym{http}{HTTP}{Hypertext Transfer Protocol}
 \newacronym{rest}{REST}{Representation State Transfer}
 \newacronym{json}{JSON}{Javascript Object Notation}
+\newacronym{url}{URL}{Uniform Resource Locator}
 % ========================== END ======================
