UPDT: Theor-Found: SM APIs - twitcurl (done)

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -853,7 +853,47 @@ journal={Twitter},
 publisher={Twitter},
   note={accessed: 2021-12-8},
 }
+%
+@misc{twitterCreatingLibsC,
+title={Creating Twitter Libraries in C++},
+url={https://blog.hashtagify.me/2020/03/18/creating-twitter-libraries-in-c/},
+journal={Hashtagify},
+publisher={Anastasia Stefanuk},
+  note={accessed: 2021-12-8},
+}
+%
+@misc{curl,
+title={cURL},
+url={https://curl.se/},
+journal={curl},
+publisher={curl},
+  note={accessed: 2021-12-8},
+}
+%
+@misc{libcurl,
+title={libcurl | the multiprotocol file transfer library},
+url={https://curl.se/libcurl/},
+journal={curl},
+publisher={curl},
+  note={accessed: 2021-12-8},
+}
+%
+@misc{libcurlBindings,
+title={libcurl bindings},
+url={https://curl.se/libcurl/bindings.html},
+journal={curl},
+publisher={curl},
+  note={accessed: 2021-12-8},
+}
+%
+@misc{twitcurlGithub,
+title={twitcurl | Github repository},
+url={https://github.com/swatkat/twitcurl},
+journal={github},
+publisher={swatkat},
+  note={accessed: 2021-12-8},
+}
 
-https://blog.hashtagify.me/2020/03/18/creating-twitter-libraries-in-c/
+
 % +++++++++++++++++++++++  END ==============================
 
