UPDT: Theor-Found: Video playback

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -893,7 +893,20 @@ journal={github},
 publisher={swatkat},
   note={accessed: 2021-12-8},
 }
-
-
+%
+@misc{video-play-cpp,
+title={Working with Video Using OpenCV and QT},
+url={http://codingexodus.blogspot.com/2012/12/working-with-video-using-opencv-and-qt.html},
+publisher={Stephen Nneji},
+  note={accessed: 2021-12-9},
+}
+%
+@misc{http-example-cisco,
+  author       = {Cisco},
+  title        = {Transferring Files Using HTTP or HTTPS},
+  howpublished = {\url{https://www.cisco.com/c/en/us/td/docs/ios-xml/ios/ifs/configuration/xe-16/ifs-xe-16-book/ifs-file-trans-http.pdf}},
+  year         = {2018},
+  note         = {accessed: 2021-12-08}
+}
 % +++++++++++++++++++++++  END ==============================
 
