ADD: Theor-Found: Image Filtering and file transfer

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -908,5 +908,19 @@ publisher={Stephen Nneji},
   year         = {2018},
   note         = {accessed: 2021-12-08}
 }
+%
+@misc{transfer-sh,
+title={Transfer SH website},
+url={https://transfer.sh},
+publisher={transfer sh},
+  note={accessed: 2021-12-10},
+}
+%
+@misc{snapchat-filter,
+title={Give Hermione Granger a Cool Pair of Glasses by building Snapchat Filter using OpenCV},
+url={https://www.analyticsvidhya.com/blog/2021/07/give-hermione-granger-a-cool-pair-of-glasses-by-building-snapchat-filter-using-opencv/},
+publisher={Tithi Sreemany},
+  note={accessed: 2021-12-10},
+}
 % +++++++++++++++++++++++  END ==============================
 
