--- a/Proj/report/dissertation.tex
+++ b/Proj/report/dissertation.tex
@@ -163,9 +163,9 @@
 \setcounter{table}{0}
 \setcounter{figure}{0}
 %%
-%\include{./tex/Chap/3-Design/DESIGN}
-%\setcounter{table}{0}
-%\setcounter{figure}{0}
+\include{./tex/Chap/4-Design/DESIGN}
+\setcounter{table}{0}
+\setcounter{figure}{0}
 %
 %\include{./tex/Chap/4-Implem/IMPLEM}
 %\setcounter{table}{0}
