UPDT: Theor-Found: GIF generation (end)

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -948,5 +948,53 @@ url={https://www.aromaoutfitters.com/whats-the-difference-between-an-ultrasonic-
 publisher={Aroma Outfitters},
   note={accessed: 2021-12-5}
 }
+%
+@misc{gifSpec87,
+title={Graphics Interchange Format (GIF) Specification},
+url={https://www.w3.org/Graphics/GIF/spec-gif87.txt},
+publisher={W3 Consortium},
+  note={accessed: 2021-12-10}
+}
+%
+@book{miano1999compressed,
+  title={Compressed image file formats: Jpeg, png, gif, xbm, bmp},
+  author={Miano, John},
+  year={1999},
+  publisher={Addison-Wesley Professional}
+}
+%
+@misc{imageMagick,
+title={ImageMagick},
+url={https://imagemagick.org/index.php},
+publisher={ImageMagick},
+  note={accessed: 2021-12-10}
+}
+%
+@misc{MagickWand,
+title={MagickWand},
+url={https://imagemagick.org/script/magick-wand.php},
+publisher={ImageMagick},
+  note={accessed: 2021-12-10}
+}
+%
+@misc{MagickCore,
+title={MagickCore},
+url={https://imagemagick.org/script/magick-core.php},
+publisher={ImageMagick},
+  note={accessed: 2021-12-10}
+}
+@misc{Magick++,
+title={Magick++},
+url={https://imagemagick.org/script/magick++.php},
+publisher={ImageMagick},
+  note={accessed: 2021-12-10}
+}
+%
+@misc{Magick++Docs,
+title={Magick++ | Documentation},
+url={https://www.imagemagick.org/Magick++/Documentation.html}
+publisher={ImageMagick},
+  note={accessed: 2021-12-10}
+}
 % +++++++++++++++++++++++  END ==============================
 
