--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -186,4 +186,5 @@
 \newacronym{rest}{REST}{Representation State Transfer}
 \newacronym{json}{JSON}{Javascript Object Notation}
 \newacronym{url}{URL}{Uniform Resource Locator}
+\newacronym{lsb}{LSB}{Least Significant Bit}
 % ========================== END ======================
